# CodeExtractTools

./: .gitignore  README.md  SourceCodeExtractTools.sln
CodeExtractTools/: CodeExtractTools.csproj  Form1.Designer.cs  Form1.cs  FormMain.Designer.cs  FormMain.cs  Program.cs
CodeExtractTools/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
code-extract-rust/: Cargo.toml
code-extract-rust/src/: doc_gen.rs  extractor.rs  main.rs  scanner.rs
code-extract-rust/ui/: main.slint
code-extract-v3/: README.md  index.html  package-lock.json  package.json
code-extract-v3/src/: App.tsx  main.tsx
code-extract-v3/src-tauri/: 2  Cargo.toml  tauri.conf.json
code-extract-v3/src-tauri/src/: extractor.rs  lib.rs  main.rs  scanner.rs
code-extract-v3/src/components/: FileTree.tsx
